--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ img.project {
 }
 
 img.thumbnail {
+  display: inline-block;
   width: 8rem;
   height: 8rem;
   border: 1px solid var(--foreground);
