--- a/styles.css
+++ b/styles.css
@@ -112,11 +112,29 @@ nav {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  html {
-    font-size: 14px;
-  }
   body {
     max-width: 288px;
+  }
+
+  #name {
+    font-size: 2rem;
+  }
+
+  .heading-2 {
+    font-size: 1.65rem;
+  }
+
+  .heading-4 {
+    font-size: 1.25rem;
+  }
+
+  .skills {
+    font-size: 3rem;
+  }
+
+  .skills-img {
+    width: 3rem;
+    height: 3rem;
   }
 }
 
