--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,12 @@ nav {
   }
 }
 
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  body {
+    max-width: 448px;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   body {
     max-width: 576px;
