Center projects' names.

--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,9 @@ nav {
   margin-right: var(--spacing);
 }
 
+.project-container {
+  text-align: center;
+}
 footer {
   height: 64px;
   display: flex;
